fix overwrite file in fs

--- a/views/lisa_generate_content.ejs
+++ b/views/lisa_generate_content.ejs
@@ -72,7 +72,7 @@
         $.post("/lisa/generateContent",
         json,
         function(data,status){
-            alert("data: "+data+"\nStatus:" + status);
+            alert("Data: "+data+"\nStatus:" + status);
             json = null;
         });
     }
