--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
     <center>
     <div class="jumbotron">
         <h2>Which side you are ?</h2>
-        <a href="/line_generate" class="btn btn-primary"> Lisaguru </a> <a href="/hello/hello_generate_content.ejs" class="btn btn-primary">Hello magazine thailand </a>
+        <a href="/lisa_linegenerate" class="btn btn-primary"> Lisaguru </a> <a href="/hello_linegenerate" class="btn btn-primary">Hello magazine thailand </a>
         
     </div>
     </center>
