change some frontend

--- a/views/lisa_generate_content.ejs
+++ b/views/lisa_generate_content.ejs
@@ -22,15 +22,15 @@
                     <input type="text" class="form-control" id="article1" name="article1">
                 </div>
                 <div class="form-group">
-                    <label> First Recommanded Article url 1</label>
+                    <label style="color:#5694e0;"> First Recommanded Article url 1</label>
                     <input type="text" class="form-control" id="rec1_1" name="rec1_1">
                 </div>
                 <div class="form-group">
-                    <label> Second Recommanded Article url 1</label>
+                    <label style="color:#5694e0;"> Second Recommanded Article url 1</label>
                     <input type="text" class="form-control" id="rec2_1" name="rec2_1">
                 </div>
                 <div class="form-group">
-                    <label> Third Recommanded Article url 1</label>
+                    <label style="color:#5694e0;"> Third Recommanded Article url 1</label>
                     <input type="text" class="form-control" id="rec3_1" name="rec3_1">
                 </div>
                 
@@ -46,9 +46,9 @@
     function addArticle(){
         count ++;
         $("div.form-article").append("<hr class='line"+count+"'><div class='form-group-"+count+"'><label> Main Article url </label><input type='text' class='form-control' id='article"+count+"' name='article"+count+"'></div>");
-        $("div.form-article").append("<div class='form-group-"+count+"'><label>First Recommanded Article url "+count+"</label><input type='text' class='form-control' id='rec1_"+count+"' name='rec1_"+count+"'></div>");
-        $("div.form-article").append("<div class='form-group-"+count+"'><label>Second Recommanded Article url "+count+"</label><input type='text' class='form-control' id='rec2_"+count+"' name='rec2_"+count+"'></div>");
-        $("div.form-article").append("<div class='form-group-"+count+"'><label>Third Recommanded Article url "+count+"</label><input type='text' class='form-control' id='rec3_"+count+"' name='rec3_"+count+"'></div>");
+        $("div.form-article").append("<div class='form-group-"+count+"'><label style='color:#5694e0;'>First Recommanded Article url "+count+"</label><input type='text' class='form-control' id='rec1_"+count+"' name='rec1_"+count+"'></div>");
+        $("div.form-article").append("<div class='form-group-"+count+"'><label style='color:#5694e0;'>Second Recommanded Article url "+count+"</label><input type='text' class='form-control' id='rec2_"+count+"' name='rec2_"+count+"'></div>");
+        $("div.form-article").append("<div class='form-group-"+count+"'><label style='color:#5694e0;'>Third Recommanded Article url "+count+"</label><input type='text' class='form-control' id='rec3_"+count+"' name='rec3_"+count+"'></div>");
     }
     function removeArticle(){
         if(count > 1){
