fix download problem1

--- a/views/lisa_generate_content.ejs
+++ b/views/lisa_generate_content.ejs
@@ -94,7 +94,7 @@
         function(data,status){
             alert(data);
             json = null;
-            $("div.download-here").html("<a href='/download' >Download</a>");
+            $("div.download-here").html("<a href='/lisa_download' >Download</a>");
         });
     }
 
