--- a/views/lisa_generate_content.ejs
+++ b/views/lisa_generate_content.ejs
@@ -13,9 +13,13 @@
     <div class="container">    
         <div class="col-sm-6 col-sm-offset-3">
             <br>
+            <a href="/"> Back </a>
             <center><h1> Lisaguru Line content generated </h1></center>
-            <center><button type="button" class="btn btn-primary" onclick="addArticle();">Add the content</button>
-            <button type="button" class="btn btn-primary" onclick="removeArticle();">Remove the content</button></center>
+            <center>
+            <button type="button" class="btn btn-primary" onclick="addArticle();">Add the content</button>
+            <button type="button" class="btn btn-primary" onclick="removeArticle();">Remove the content</button>
+            </center>
+
             <div class="form-article">
                 <div class="form-group">
                     <label> Main Article url </label>
