changing front end

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,20 +2,19 @@
 <html>
 <head>
     <title>Burda Linetoday</title>
+    <link href="/css/home.css" rel="stylesheet">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css"> <!-- load bootstrap css -->
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css"> <!-- load fontawesome -->
 </head>
 <body>
-    <br>
-    <br>
-    <br>
-    <center>
-    <div class="jumbotron">
-        <h2>Which side you are ?</h2>
-        <a href="/lisa_linegenerate" class="btn btn-primary"> Lisaguru </a> <a href="/hello_linegenerate" class="btn btn-primary">Hello magazine thailand </a>
-        
-    </div>
-    </center>
+    <header id="top" class="header">
+        <div class="text-vertical-center">
+            <h1>Welcome to Digital Department Service</h1>
+            <h3>Generating xml file content for Linetoday</h3>
+            <br>
+            <a href="/lisa_linegenerate" class="btn btn-dark btn-lg">Lisaguru</a>   <a href="/hello_linegenerate" class="btn btn-dark btn-lg">Hello magazine thailand </a>
+        </div>
+    </header>
 </body>
 
 </html>
