--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
 <body>
     <header id="top" class="header">
         <div class="text-vertical-center">
-            <h1>Welcome to Digital Department Service</h1>
+            <h1>Welcome to our services in Digital Department </h1>
             <h3>Generating xml file content for Linetoday</h3>
             <br>
             <a href="/lisa_linegenerate" class="btn btn-dark btn-lg">Lisaguru</a>   <a href="/hello_linegenerate" class="btn btn-dark btn-lg">Hello magazine thailand </a>
