fix just a text

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
     <header id="top" class="header">
         <div class="text-vertical-center">
             <h1>Welcome to our services in Digital Department </h1>
-            <h3>Generating xml file content for Linetoday</h3>
+            <h3>Generating content to xml file for Linetoday</h3>
             <br>
             <a href="/lisa_linegenerate" class="btn btn-dark btn-lg">Lisaguru</a>   <a href="/hello_linegenerate" class="btn btn-dark btn-lg">Hello magazine thailand </a>
         </div>
