--- a/public/css/home.css
+++ b/public/css/home.css
@@ -13,7 +13,15 @@ body {
 }
 
 body {
-    font-family: "Source Sans Pro","Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: 'Varela Round', sans-serif;
+}
+
+h1 {
+  font-weight: 600;
+}
+
+h5 {
+  color: #888;
 }
 
 .text-vertical-center {
@@ -28,8 +36,31 @@ body {
     padding: 0;
     font-size: 4.5em;
     font-weight: 700;
-    
-    
+}
+
+header {
+  margin-bottom: 7vh;
+}
+
+div.main-content {
+  min-height: 40vh;
+}
+
+
+div.line-bg {
+  height: 313px;
+}
+
+div.line-bg img {
+    display: block;
+    margin: auto;
+    max-width: 500px;
+    width: 100%;
+}
+
+/* Helper Styles */
+.text-center {
+  text-align: center;
 }
 
 /* Custom Button Styles */
@@ -153,14 +184,80 @@ hr.small {
 
 /* Header */
 
-.header {
-    display: table;
-    position: relative;
-    width: 100%;
-    height: 100%;
-    background: url(../img/bg.jpg) no-repeat center center scroll;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    -o-background-size: cover;
+
+/* Navigation */
+.navbar {
+  background: #00c402 !important;
+  color: #fff;
+  border-radius: 0 !important;
 }
+
+.navbar-nav {
+    float: right !important;
+    margin: 10px !important;
+}
+
+.navbar-dark .navbar-nav .active > .nav-link, .navbar-dark .navbar-nav .active > .nav-link:focus, .navbar-dark .navbar-nav .active > .nav-link:hover,
+.navbar-dark .navbar-nav .nav-link:hover  {
+  background: none;
+}
+
+.logo {
+  font-family: -apple-system,system,"Helvetica Neue",Helvetica,Arial,sans-serif;
+}
+
+.navbar-brand {
+  padding-bottom: 0.75rem !important;
+  padding-top: 0.75rem !important;
+}
+
+/* Footer */
+.footer {
+  bottom: 0;
+}
+
+.footer p {
+  color: #ccc;
+}
+
+/* Button Styles */
+a.btn.btn-green, button.btn.btn-green {
+  background: #fff;
+  color: #00c402;
+  -webkit-box-shadow: 0px 5px 0px 0px rgba(1,158,3,1);
+-moz-box-shadow: 0px 5px 0px 0px rgba(1,158,3,1);
+box-shadow: 0px 5px 0px 0px rgba(1,158,3,1);
+  border: 1px solid #00c402;
+  transition: opacity .25s ease-in-out;
+   -moz-transition: opacity .25s ease-in-out;
+   -webkit-transition: opacity .25s ease-in-out;
+   transition: background 0.2s ease;
+   -moz-transition: background 0.2s ease;
+   -webkit-transition: background 0.2s ease;
+   margin: 15px;
+}
+
+a.btn.btn-green:hover, button.btn.btn-green:hover {
+  background: #00c402;
+  color: #fff;
+  -webkit-box-shadow: 0px 5px 0px 0px rgba(0,126,1,1);
+-moz-box-shadow: 0px 5px 0px 0px rgba(0,126,1,1);
+box-shadow: 0px 5px 0px 0px rgba(0,126,1,1);
+border: 1px solid #019e03;
+}
+
+.btn-primary {
+    background-color: #00c402;
+    border-color: #019e03;
+    color: #fff;
+}
+
+.btn-primary:hover {
+    background-color: #019e03;
+    border-color: #00c402;
+}
+
+/* Label */
+.text-green { color: #00c402;}
+.text-orange { color: #ee6512;}
+.text-black { color: #000;}
