--- a/views/lisa_generate_content.ejs
+++ b/views/lisa_generate_content.ejs
@@ -3,57 +3,110 @@
 
 <head>
     <title> Lisaguru Line generate content </title>
+    <link href="/css/bootstrap-4/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/home.css" rel="stylesheet">
+
+    <!-- Load Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
+
     <link href="/css/lisa.css" rel="stylesheet">
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
     <!-- load bootstrap css -->
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
+    <!-- <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css"> -->
+
+    <!-- load bootstrap css -->
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- load fontawesome -->
 </head>
 
 <body>
-    <div class="container">    
-        <div class="col-sm-6 col-sm-offset-3">
+  <header id="top" class="header">
+    <nav class="navbar navbar-dark bg-inverse">
+      <div class="container">
+        <a class="navbar-brand logo" href="/">LINE TODAY</a>
+        <ul class="nav navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="/lisa_linegenerate">Lisaguru</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/hello_linegenerate">Hello!</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <div class="clearfix"></div>
+  </header>
+
+  <content>
+    <div class="container">
+        <div class="col-md-3">
+        </div>
+        <div class="col-md-6 col-sm-12 col-sm-offset-3">
             <br>
-            <a href="/"> Back </a>
-            <center><h1> Lisaguru Line content generated </h1></center>
+
+            <center><h2> Lisaguru Line content generated </h2></center>
             <center>
-            <button type="button" class="btn btn-primary" onclick="addArticle();">Add the content</button>
-            <button type="button" class="btn btn-primary" onclick="removeArticle();">Remove the content</button>
+            <button type="button" class="btn btn-primary" onclick="addArticle();">
+              <i class="fa fa-plus" aria-hidden="true"></i> Add the content
+            </button>
+            <button type="button" class="btn btn-danger" onclick="removeArticle();">
+              <i class="fa fa-trash" aria-hidden="true"></i> Remove the content
+            </button>
             </center>
+            <br>
 
             <div class="form-article">
                 <div class="form-group">
-                    <label> Main Article url </label>
+                    <label class="text-green"> Main Article url </label>
                     <input type="text" class="form-control" id="article1" name="article1">
                 </div>
                 <div class="form-group">
-                    <label style="color:#5694e0;"> First Recommanded Article url 1</label>
+                    <label class="text-black"> First Recommanded Article url 1</label>
                     <input type="text" class="form-control" id="rec1_1" name="rec1_1">
                 </div>
                 <div class="form-group">
-                    <label style="color:#5694e0;"> Second Recommanded Article url 1</label>
+                    <label class="text-black"> Second Recommanded Article url 1</label>
                     <input type="text" class="form-control" id="rec2_1" name="rec2_1">
                 </div>
                 <div class="form-group">
-                    <label style="color:#5694e0;"> Third Recommanded Article url 1</label>
+                    <label class="text-black"> Third Recommanded Article url 1</label>
                     <input type="text" class="form-control" id="rec3_1" name="rec3_1">
                 </div>
-                
+
             </div>
-            <center><button type="button" class="btn btn-primary" onclick="submit();">Submit</button></center>
+            <br>
+            <center><button type="button" class="btn btn-green btn-lg" onclick="submit();">Submit</button></center>
             <div class="download-here">
             </div>
         </div>
+        <div class="col-md-3">
+        </div>
     </div>
+    <div class="container line-bg">
+      <img src="/img/line_bg.png">
+    </div>
+  </content>
+
+  <footer class="footer">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12 text-center">
+          <p>&copy; 2016 Burda Digital</p>
+        </div>
+      </div>
+    </div>
+  </footer>
 </body>
 <script>
     var count = 1;
     function addArticle(){
         count ++;
-        $("div.form-article").append("<hr class='line"+count+"'><div class='form-group-"+count+"'><label> Main Article url </label><input type='text' class='form-control' id='article"+count+"' name='article"+count+"'></div>");
-        $("div.form-article").append("<div class='form-group-"+count+"'><label style='color:#5694e0;'>First Recommanded Article url "+count+"</label><input type='text' class='form-control' id='rec1_"+count+"' name='rec1_"+count+"'></div>");
-        $("div.form-article").append("<div class='form-group-"+count+"'><label style='color:#5694e0;'>Second Recommanded Article url "+count+"</label><input type='text' class='form-control' id='rec2_"+count+"' name='rec2_"+count+"'></div>");
-        $("div.form-article").append("<div class='form-group-"+count+"'><label style='color:#5694e0;'>Third Recommanded Article url "+count+"</label><input type='text' class='form-control' id='rec3_"+count+"' name='rec3_"+count+"'></div>");
+        $("div.form-article").append("<hr class='line"+count+"'><div class='form-group-"+count+"'><label class='text-green'> Main Article url </label><input type='text' class='form-control' id='article"+count+"' name='article"+count+"'></div>");
+        $("div.form-article").append("<div class='form-group-"+count+"'><label class='text-black'>First Recommanded Article url "+count+"</label><input type='text' class='form-control' id='rec1_"+count+"' name='rec1_"+count+"'></div>");
+        $("div.form-article").append("<div class='form-group-"+count+"'><label class='text-black'>Second Recommanded Article url "+count+"</label><input type='text' class='form-control' id='rec2_"+count+"' name='rec2_"+count+"'></div>");
+        $("div.form-article").append("<div class='form-group-"+count+"'><label class='text-black'>Third Recommanded Article url "+count+"</label><input type='text' class='form-control' id='rec3_"+count+"' name='rec3_"+count+"'></div>");
     }
     function removeArticle(){
         if(count > 1){
