--- a/views/hello_generate_content.ejs
+++ b/views/hello_generate_content.ejs
@@ -164,13 +164,13 @@
         function(data,status){
             alert(data);
             json = null;
-            /*for(var i=0;i< count ;i++){
+            for(var i=0;i< count ;i++){
                 document.getElementById("article"+(i+1)).value = "";
                 document.getElementById("c_id"+(i+1)).value = "";
                 document.getElementById("rec1_"+(i+1)).value = "";
                 document.getElementById("rec2_"+(i+1)).value = "";
                 document.getElementById("rec3_"+(i+1)).value = "";
-            }*/
+            }
             $("div.download-here").html("<a href='/hello_download' >Download</a>");
         });
     }
