--- a/views/lisa_generate_content.ejs
+++ b/views/lisa_generate_content.ejs
@@ -77,7 +77,7 @@
 
             </div>
             <br>
-            <center><button type="button" class="btn btn-green btn-lg" onclick="submit();">Submit</button></center>
+            <center><button type="button" id="submitBn" class="btn btn-green btn-lg" onclick="submit();">Submit</button></center>
             <div class="download-here">
             </div>
         </div>
@@ -116,6 +116,7 @@
         }
     }
     function submit(){
+        document.getElementById('submitBn').disabled = 'disabled';
         var json = {
             "data" : []
         };
@@ -152,6 +153,7 @@
         function(data,status){
             alert(data);
             json = null;
+            document.getElementById('submitBn').disabled = '';
             for(var i=0;i< count ;i++){
                 document.getElementById("article"+(i+1)).value = "";
                 document.getElementById("rec1_"+(i+1)).value = "";
