fix double click button problem

--- a/views/lisa_generate_content.ejs
+++ b/views/lisa_generate_content.ejs
@@ -123,18 +123,22 @@
         for(var i=0;i<count;i++){
             if(document.getElementById("article"+(i+1)).value == ''){
                 alert("Please enter the Article url"+(i+1));
+                document.getElementById('submitBn').disabled = '';
                 return;
             }
             else if (document.getElementById("rec1_"+(i+1)).value == ''){
                 alert("Plase enter the first recommended "+(i+1));
+                document.getElementById('submitBn').disabled = '';
                 return;
             }
             else if (document.getElementById("rec2_"+(i+1)).value == ''){
                 alert("Plase enter the second recommended "+(i+1));
+                document.getElementById('submitBn').disabled = '';
                 return;
             }
             else if (document.getElementById("rec3_"+(i+1)).value == ''){
                 alert("Plase enter the third recommended "+(i+1));
+                document.getElementById('submitBn').disabled = '';
                 return;
             }
         }
