change title for hello

--- a/views/hello_generate_content.ejs
+++ b/views/hello_generate_content.ejs
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title> Lisaguru Line generate content </title>
+    <title> Hellomagazine Line generate content </title>
     <link href="/css/bootstrap-4/css/bootstrap.min.css" rel="stylesheet">
     <link href="/css/home.css" rel="stylesheet">
 
