--- a/views/hello_generate_content.ejs
+++ b/views/hello_generate_content.ejs
@@ -178,7 +178,7 @@
                 document.getElementById("rec2_"+(i+1)).value = "";
                 document.getElementById("rec3_"+(i+1)).value = "";
             }
-            $("div.download-here").html("<a href='/hello_download' >Download</a>");
+           // $("div.download-here").html("<a href='/hello_download' >Download</a>");
         });
     }
 
