make change the frontend

--- a/views/hello_generate_content.ejs
+++ b/views/hello_generate_content.ejs
@@ -89,9 +89,9 @@
             </div>
             <br>
             <center>
-              <button type="button" id="submitBn" class="btn btn-green btn-lg" onclick="submit();">Submit</button></center>
-            <div class="download-here">
-            </div>
+              <button type="button" id="submitBn" class="btn btn-green btn-lg" onclick="submit();">Submit</button>
+            </center>
+            <p style="color:red;">Please wait at least 30 minutes per submission for Linebot to collect the contents. Thank you.</p>
         </div>
         <div class="col-md-3">
         </div>
@@ -184,7 +184,6 @@
                 document.getElementById("rec2_"+(i+1)).value = "";
                 document.getElementById("rec3_"+(i+1)).value = "";
             }
-           // $("div.download-here").html("<a href='/hello_download' >Download</a>");
         });
     }
 
