--- a/views/lisa_generate_content.ejs
+++ b/views/lisa_generate_content.ejs
@@ -51,7 +51,6 @@
         </div>
         <div class="col-md-6 col-sm-12 col-sm-offset-3">
             <br>
-
             <center><h2> Lisaguru Line content generated </h2></center>
             <center>
             <button type="button" class="btn btn-primary" onclick="addArticle();">
@@ -84,8 +83,7 @@
             </div>
             <br>
             <center><button type="button" id="submitBn" class="btn btn-green btn-lg" onclick="submit();">Submit</button></center>
-            <div class="download-here">
-            </div>
+            <p style="color:red;">Please wait at least 30 minutes per submission for Linebot to collect the contents. Thank you.</p>
         </div>
         <div class="col-md-3">
         </div>
@@ -170,7 +168,6 @@
                 document.getElementById("rec2_"+(i+1)).value = "";
                 document.getElementById("rec3_"+(i+1)).value = "";
             }
-            //$("div.download-here").html("<a href='/lisa_download' >Download</a>");
         });
     }
 
