--- a/views/login.ejs
+++ b/views/login.ejs
@@ -27,7 +27,7 @@
                     <img class="profile-img" src="https://lh5.googleusercontent.com/-b0-k99FZlyE/AAAAAAAAAAI/AAAAAAAAAAA/eu7opA4byxI/photo.jpg?sz=120"
                         alt="">
                     <form class="form-signin" method='post' action='/api/login'>
-                        <input type="text" class="form-control" placeholder="Email" name="username"required autofocus>
+                        <input type="text" class="form-control" placeholder="Username" name="username"required autofocus>
                         <input type="password" class="form-control" placeholder="Password" name="password" required>
                         <br>
                         <button class="btn btn-lg btn-primary btn-block" type="submit">
