--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -79,6 +79,7 @@
 <script>
   $(document).ready(function() {
     $('#data').dataTable( {
+       "order": [[ 3, "asc" ]]
     } );
 } );
 </script>
