--- a/views/hello_generate_content.ejs
+++ b/views/hello_generate_content.ejs
@@ -106,6 +106,7 @@
       <div class="row">
         <div class="col-md-12 text-center">
           <p>&copy; 2016 Burda Digital</p>
+          <p style="font-size: 8px;">Power by ChinLi</p>
         </div>
       </div>
     </div>
